more corr analysis

--- a/endnote.bib
+++ b/endnote.bib
@@ -23,13 +23,16 @@
 }
 
 
-﻿@article{Liu_2019_JOPD,
+﻿@article{Liu_2020_JOPD,
    author = {Liu, Qinglan and Wang, Fei and Yan, Wenjin and Peng, Kaiping and Hu, Chuan-Peng},
    title = {Questionnaire Data from the Revision of a Chinese Version of Free Will and Determinism Plus Scale},
    journal = {Journal of Open Psychology Data},
-   DOI = {10.31234/osf.io/7ngey},
-   url = {https://psyarxiv.com/7ngey/},
-   year = {2019},
+   volume = {8},
+   number = {1},
+   pages = {1},
+   DOI = {10.5334/jopd.49/},
+   url = {http://doi.org/10.5334/jopd.49},
+   year = {2020},
    type = {Journal Article}
 }
 
