--- a/Suppl_Materials_individual_Exp.tex
+++ b/Suppl_Materials_individual_Exp.tex
@@ -112,7 +112,7 @@ Correspondence concerning this article should be addressed to Chuan-Peng Hu, Lan
 \begin{document}
 \maketitle
 
-The Bayes factor is the ratio of the probability of the current data pattern under alternative hypothesis (H\_1) and the probability of the current data pattern under null hypothesis (H\_0), which index the relative evidence for these two hypotheses from the current data. The BF\_10 represents the evidence for alternative hypothesis (H\_1) vs.~evidence for null hypothesis (H\_0); in contrast, BF\_01 represents that evidence for null hypothesis over the evidence for althernative hypothesis. We used the default prior in JASP for all the Bayes Factor analyses, and used ({\textbf{???}})'s convention for the strength of evidence: the BF\_10 \textgreater{} 3 means there are some evidence for H\_1 as compared with H\_0, BF\_10 great or equal to 10 means strong evidence for H\_1.
+The Bayes factor is the ratio of the probability of the current data pattern under alternative hypothesis (H\_1) and the probability of the current data pattern under null hypothesis (H\_0), which index the relative evidence for these two hypotheses from the current data. The BF\_10 represents the evidence for alternative hypothesis (H\_1) vs.~evidence for null hypothesis (H\_0); in contrast, BF\_01 represents that evidence for null hypothesis over the evidence for althernative hypothesis. We used the default prior in JASP for all the Bayes Factor analyses, and used Jeffreys (1961)'s convention for the strength of evidence: the BF\_10 \textgreater{} 3 means there are some evidence for H\_1 as compared with H\_0, BF\_10 great or equal to 10 means strong evidence for H\_1.
 
 \hypertarget{experiment-1a}{%
 \section{Experiment 1a}\label{experiment-1a}}
@@ -785,6 +785,11 @@ For the matched trials, the interaction between identity and valence, \(F(1.62, 
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs}{}
+\leavevmode\hypertarget{ref-Jeffreys_1961}{}%
+Jeffreys, H. (1961). \emph{Theory of probability} (3rd ed.). Book, Oxford, UK: Oxford University Press.
+
+\leavevmode\hypertarget{ref-Jeffreys_1961}{}%
+Jeffreys, H. (1961). \emph{Theory of probability} (3rd ed.). Book, Oxford, UK: Oxford University Press.
 
 \endgroup
 
