simplified the data loading

--- a/endnote.bib
+++ b/endnote.bib
@@ -166,3 +166,27 @@ http://www.springerlink.com/content/210757612263v7h1/fulltext.pdf},
    type = {Book}
 }
 
+﻿@article{Brainard_1997,
+   author = {Brainard, David H},
+   title = {The psychophysics toolbox},
+   journal = {Spatial Vision},
+   volume = {10},
+   number = {4},
+   pages = {433-436},
+   ISSN = {0169-1015},
+   year = {1997},
+   type = {Journal Article}
+}
+
+@article{Pelli_1997,
+   author = {Pelli, Denis G},
+   title = {The VideoToolbox software for visual psychophysics: Transforming numbers into movies},
+   journal = {Spatial vision},
+   volume = {10},
+   number = {4},
+   pages = {437-442},
+   ISSN = {0169-1015},
+   year = {1997},
+   type = {Journal Article}
+}
+
